# minimal-ai

./: Cargo.toml  README.md  installer.iss
src/: main.rs
