[package]
name = "minimal_ai"
version = "0.1.0"
edition = "2024"
description = "Minimal AI CLI Assistant"
homepage = "https://github.com/Revaycolizer/minimal_ai"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
meval = "0.2"
fuzzy-matcher = "0.3"
rustyline = "11.0"
colored = "2.0"
csv = "1.3"

[package.metadata.deb]
maintainer = "Revaycolizer"


